# lightning-git

./: .allowed_signers  .env.example  .gitignore  AUTHORSHIP.md  DEPLOYMENT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
backend/src/: main.rs
backend/src/config/: middleware.rs
backend/src/error/: custom_errors.rs
backend/src/handler/: comment_handler.rs  config_handler.rs  merge_handler.rs  mod.rs  org_handler.rs  overlay_handler.rs  overlay_ws.rs  project_handler.rs  task_handler.rs  user_handler.rs
backend/src/macros/: macros.rs
backend/src/model/: app_state.rs  git.rs  mod.rs  org.rs  overlay.rs  project.rs  task.rs  task_type.rs  user.rs
backend/src/repository/: mod.rs  org_repository.rs  project_repository.rs  task_repository.rs  user_repository.rs
backend/src/routes/: global_routes.rs  mod.rs
backend/src/service/: git_service.rs  merge_service.rs  mod.rs  overlay_service.rs  permission_service.rs  project_service.rs
backend/src/supabase/: table_creation.sql
backend/src/test/: README.md  mod.rs
backend/src/test/helpers/: helpers.rs
backend/src/test/tier_1/: conflict_tests.rs  diff_tests.rs  mod.rs  ws_contract_tests.rs
backend/src/test/tier_2/: app_state_test.rs  mod.rs  overlay_service_test.rs
backend/src/test/tier_3/: git_service_tests.rs  merge_service_tests.rs  mod.rs
backend/src/test/tier_4/: auth_tests.rs  handler_tests.rs  health_tests.rs  mod.rs
backend/supabase/: table_creation.sql
extension/: .gitignore  CHANGELOG.md  README.md  dev-two-sessions.sh  package-lock.json  package.json  tsconfig.json
extension/.github/workflows/: ci.yml
extension/src/: auth.ts  client.ts  conflictPanel.ts  conflictsEqual.test.ts  conflictsEqual.ts  errorMessage.test.ts  errorMessage.ts  extension.ts  gitUrl.test.ts  gitUrl.ts  liveConflicts.ts  overlaySession.ts  palette.test.ts  palette.ts  parseWsMessage.test.ts  parseWsMessage.ts
extension/src/auth/: authClient.ts  secretsStorage.ts  statusBar.ts
extension/src/util/: config.ts  logger.ts  redact.ts
extension/src/views/: projectsProvider.ts
frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts  vitest.setup.ts
frontend/src/: App.vue  style.css
frontend/src/components/: CloseIcon.vue  ConfirmDialog.vue  FileTreeNode.spec.ts  NavBar.vue  (+7 more)
(+32 files in other folders)
