[package]
name = "hf-lightning-git-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
utoipa = { version = "4", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ['actix-web'] }
validator = { version = "0.20.0", features = ["derive"] }
