[package]
name = "lightning_git"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
supabase-auth = "0.10.14"
supabase-jwt = "0.1.1"
supabase_rs = "0.5.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
utoipa = { version = "4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ['actix-web'] }
utoipa-actix-web = "0.1.2"
dashmap = "6.1.0"
actix-ws = "0.3.1"
futures-util = "0.3.31"
actix-web-actors = "4.3.1"
similar = "2.7.0"
reqwest = { version = "0.13.2", features = ["json"]}
regex = "1.12.3"
validator = { version= "0.20.0", features = ["derive"] }
lazy_static = "1.5.0"
once_cell = "1.21.3"
